--- a/src/pages/AddUser.module.css
+++ b/src/pages/AddUser.module.css
@@ -1,10 +1,28 @@
 .form {
-padding: 30px;
+/* padding: 30px; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(207, 207, 207);
+  background-color: rgb(173, 172, 172);
+}
+
+.form input {
+    
+    width: 250px;
+    height: 25px;
+    margin: 5px;
+    font-size: 15px;
+}
+
+.card {
+    margin-top: 36px;
+    background-color: rgb(112, 202, 124);
+    padding: 20px;
+    width: 400px;
+    height: 350px;
+    border: 2px solid rgba(255, 255, 255, 0.514);
+    border-radius: 15%;
 }
 
 .btn {
