--- a/src/pages/AddUser.module.css
+++ b/src/pages/AddUser.module.css
@@ -31,7 +31,7 @@
     margin-bottom: 10px;
 }
 
-.btn {
+/* .btn {
     justify-content: center;
     align-items: center;
     display: flex;
@@ -44,7 +44,7 @@
 button:hover {
     background-color: rgb(156, 228, 162);
     
-}
+} */
 
 .input {
     min-height: 30px;
