--- a/src/pages/UserList.module.css
+++ b/src/pages/UserList.module.css
@@ -51,7 +51,7 @@ h2 {
   font-size: 16px;
 }
 
-.btnBlue {
+.btnEdit {
   cursor: pointer;
   margin: 10px;
   padding: 10px;
@@ -59,7 +59,7 @@ h2 {
   border-radius: 5px;
   text-decoration: none;
   color: rgb(0, 0, 0);
-  background-color: rgb(134, 198, 250);
+  background-color: rgb(89, 185, 105);
 }
 
 .btnRed {
